add docs for user menagement
