# cmd/server/docs/swagger.yaml
@@ -68,6 +68,31 @@ definitions:
         example: false
         type: boolean
     type: object
+  github_com_qhmd_gitforgits_internal_dto_auth.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  github_com_qhmd_gitforgits_internal_dto_auth.RegisterRequest:
+    properties:
+      email:
+        type: string
+      name:
+        maxLength: 50
+        minLength: 4
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - name
+    - password
+    type: object
   github_com_qhmd_gitforgits_internal_dto_auth.SuccessAccessToken:
     properties:
       data:
@@ -86,6 +111,15 @@ definitions:
         $ref: '#/definitions/github_com_qhmd_gitforgits_internal_domain_auth.Auth'
       message:
         example: success to login
+        type: string
+      success:
+        example: true
+        type: boolean
+    type: object
+  github_com_qhmd_gitforgits_internal_dto_auth.SuccessLogout:
+    properties:
+      message:
+        example: success to log out
         type: string
       success:
         example: true
@@ -246,6 +280,105 @@ definitions:
         description: Valid is true if Time is not NULL
         type: boolean
     type: object
+  users.EmailAlreadyUsed:
+    properties:
+      error:
+        example: this is email already used
+        type: string
+      message:
+        example: Email already exist, choose another Email
+        type: string
+      success:
+        example: false
+        type: boolean
+    type: object
+  users.ErrorResponse:
+    properties:
+      error:
+        example: something went wrong
+        type: string
+      success:
+        example: false
+        type: boolean
+    type: object
+  users.InvalidId:
+    properties:
+      error:
+        example: Invalid id
+        type: string
+      message:
+        example: Your id is invalid
+        type: string
+      success:
+        example: false
+        type: boolean
+    type: object
+  users.SuccessDeleteUser:
+    properties:
+      message:
+        example: success delete user
+        type: string
+      success:
+        example: true
+        type: boolean
+    type: object
+  users.SuccessGetList:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/github_com_qhmd_gitforgits_internal_domain_auth.Auth'
+        type: array
+      message:
+        example: successfully get list user
+        type: string
+      success:
+        example: true
+        type: boolean
+    type: object
+  users.SuccessGetUser:
+    properties:
+      data:
+        $ref: '#/definitions/github_com_qhmd_gitforgits_internal_domain_auth.Auth'
+      message:
+        example: successfully get the user
+        type: string
+      success:
+        example: true
+        type: boolean
+    type: object
+  users.UpdateRequest:
+    properties:
+      email:
+        type: string
+      name:
+        maxLength: 50
+        minLength: 4
+        type: string
+      password:
+        type: string
+      role:
+        enum:
+        - user
+        - admin
+        type: string
+    required:
+    - email
+    - name
+    - password
+    - role
+    type: object
+  users.UserNotFoundResponse:
+    properties:
+      errors:
+        example: user with id {id} does not exist
+        type: string
+      message:
+        example: user not found
+        type: string
+      success:
+        example: false
+        type: boolean
+    type: object
 info:
   contact: {}
   description: API documentation for project GitForGits
@@ -253,11 +386,142 @@ info:
   title: GitForGits API
   version: "1.0"
 paths:
+  /admin/users/:
+    get:
+      consumes:
+      - application/json
+      description: Get list user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/users.SuccessGetList'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/users.UserNotFoundResponse'
+      summary: Get List User
+      tags:
+      - Users
+  /admin/users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete user by id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/users.SuccessDeleteUser'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/users.InvalidId'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/users.UserNotFoundResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/users.ErrorResponse'
+      summary: Delete user
+      tags:
+      - Users
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a single user by its ID
+      parameters:
+      - description: Users ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/users.SuccessGetUser'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/users.InvalidId'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/users.UserNotFoundResponse'
+      summary: Get user by ID
+      tags:
+      - Users
+    put:
+      consumes:
+      - application/json
+      description: Update user
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Account
+        in: body
+        name: Auth
+        required: true
+        schema:
+          $ref: '#/definitions/users.UpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/users.SuccessGetList'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/users.InvalidId'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/users.UserNotFoundResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/users.EmailAlreadyUsed'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/users.ErrorResponse'
+      summary: Update user
+      tags:
+      - Users
   /auth/login:
     post:
       consumes:
       - application/json
       description: Login Account
+      parameters:
+      - description: Login Account
+        in: body
+        name: Auth
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_auth.LoginRequest'
       produces:
       - application/json
       responses:
@@ -283,7 +547,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_auth.SuccessLogin'
+            $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_auth.SuccessLogout'
       summary: Logout Account
       tags:
       - Auth
@@ -303,6 +567,9 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_auth.ErrorResponseAuth'
+      security:
+      - BearerAuth: []
+      - ApiKeyAuth: []
       summary: Me Account
       tags:
       - Auth
@@ -311,6 +578,13 @@ paths:
       consumes:
       - application/json
       description: Update user account
+      parameters:
+      - description: Update Account
+        in: body
+        name: Auth
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_auth.RegisterRequest'
       produces:
       - application/json
       responses:
@@ -330,6 +604,9 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_auth.ErrorResponseAuth'
+      security:
+      - BearerAuth: []
+      - ApiKeyAuth: []
       summary: Update Account
       tags:
       - Auth
@@ -357,6 +634,13 @@ paths:
       consumes:
       - application/json
       description: Create Account with Register
+      parameters:
+      - description: Create Account
+        in: body
+        name: Auth
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_auth.RegisterRequest'
       produces:
       - application/json
       responses:
@@ -480,10 +764,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_book.SuccessGetBook'
-        "404":
-          description: Not Found
+        "500":
+          description: Internal Server Error
           schema:
-            $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_book.BookNotFoundResponse'
+            $ref: '#/definitions/github_com_qhmd_gitforgits_internal_dto_book.ErrorResponse'
       summary: Get book by ID
       tags:
       - Books
@@ -534,7 +818,7 @@ paths:
       tags:
       - Books
 securityDefinitions:
-  BearerAuth:
+  bearer:
     in: header
     name: Authorization
     type: apiKey
